# ocgc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ocgc/: __init__.py  __main__.py  analyzer.py  cli.py  db.py  display.py  purger.py
