[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocgc"
version = "0.1.0"
description = "OpenCode Garbage Collector — analyze and reclaim storage used by OpenCode sessions, diffs, and snapshots"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Wu Haotian", email = "whtsky@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
ocgc = "ocgc.cli:cli"

[project.urls]
Repository = "https://github.com/whtsky/ocgc"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ocgc"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["ocgc"]
